Sec8_Chap56-Spring Boot Test: cleaned code